更新ECM服务功能，更新infra配置，更新Common配置